@@ -1,3 +1,12 @@
+2008-01-25  Jim Evins  <evins@snaught.com>
+
+	* src/bc.c:
+		Fixed Code128C backend parameters.
+	* src/label-barcode.c: (get_size):
+		Bug #1766425.  If barcode is not renderable with either
+		input data or default data, use a default size.  Also
+		fixed small leak.
+
 2008-01-22  Jim Evins  <evins@snaught.com>
 
 	* NEWS:
